# lazyterm

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/lazyterm-agents/: Cargo.toml
crates/lazyterm-agents/src/: lib.rs
crates/lazyterm-api/: Cargo.toml
crates/lazyterm-api/src/: lib.rs
crates/lazyterm-api/tests/: api_json_contract.rs
crates/lazyterm-app/: Cargo.toml  build.rs
crates/lazyterm-app/src/: main.rs
crates/lazyterm-cli/: Cargo.toml
crates/lazyterm-cli/src/: main.rs
crates/lazyterm-core/: Cargo.toml
crates/lazyterm-core/src/: lib.rs
crates/lazyterm-core/tests/: session_contract.rs
crates/lazyterm-git/: Cargo.toml
crates/lazyterm-git/src/: lib.rs
crates/lazyterm-git/tests/: repo_context_contract.rs
crates/lazyterm-pty/: Cargo.toml
crates/lazyterm-pty/src/: lib.rs
crates/lazyterm-sessions/: Cargo.toml
crates/lazyterm-sessions/src/: lib.rs
crates/lazyterm-terminal/: Cargo.toml
crates/lazyterm-terminal/src/: lib.rs
crates/lazyterm-ui/: Cargo.toml
crates/lazyterm-ui/src/: chrome.rs  lib.rs  settings.rs
docs/: architecture.md
scripts/: install-windows.ps1
