[package]
name = "lazyterm-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "lazyterm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
lazyterm-ui = { path = "../lazyterm-ui" }

[lints]
workspace = true

[build-dependencies]
winresource = "0.1.31"
