[package]
name = "lazyterm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "lazytermctl"
path = "src/main.rs"

[dependencies]
lazyterm-api = { path = "../lazyterm-api" }
lazyterm-core = { path = "../lazyterm-core" }
serde_json.workspace = true

[lints]
workspace = true
