[package]
name = "lazyterm-sessions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lazyterm-core = { path = "../lazyterm-core" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
