[package]
name = "lazyterm-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gpui.workspace = true
lazyterm-agents = { path = "../lazyterm-agents" }
lazyterm-core = { path = "../lazyterm-core" }

[lints]
workspace = true
