[package]
name = "lazyterm-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
gpui.workspace = true
lazyterm-core = { path = "../lazyterm-core" }
lazyterm-pty = { path = "../lazyterm-pty" }
lazyterm-terminal = { path = "../lazyterm-terminal" }

[lints]
workspace = true
