[package]
name = "lazyterm-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
gpui.workspace = true
lazyterm-api = { path = "../lazyterm-api" }
lazyterm-core = { path = "../lazyterm-core" }
lazyterm-pty = { path = "../lazyterm-pty" }
lazyterm-sessions = { path = "../lazyterm-sessions" }
lazyterm-terminal = { path = "../lazyterm-terminal" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
